Add stream collector to EnemySpawner.java