@@ -3,6 +3,8 @@ package buontyhunter.model.AI.enemySpawner;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 import buontyhunter.common.Point2d;
 import buontyhunter.model.RectBoundingBox;
@@ -23,7 +25,7 @@ public interface EnemySpawner {
                         && t.getPoint().deltaX(playerPos) > minDistanceFromPlayer
                         && t.getPoint().deltaY(playerPos) < maxDistanceFromPlayer
                         && t.getPoint().deltaY(playerPos) > minDistanceFromPlayer)
-                .toList();
+                .collect(Collectors.toList());
 
         if (tilesAvailable.size() == 0) {
             return Optional.empty();
